terraform/k8s/TargetGroupBinding.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1
  namespace: default
spec:
  ingressClassName: nginx
  
  rules:
  - http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80
